v1.0.0/modules/schema/pages/class/ClassificationCondition.adoc
= `ClassificationCondition`
:toclevels: 4


+++A classification condition used to define preconditions that must be met by a phenomena classification.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ClassificationCondition`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ClassificationCondition`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ClassificationCondition {
  style {
    fill: "#fffbef"
    shadow: true
  }
}





PhenomenonClassification {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalStringMeasurement {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalAnalog {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





ClassificationCondition -> PhenomenonClassification: PhenomenonClassification


ClassificationCondition -> EnvironmentalStringMeasurement: EnvironmentalStringMeasurement


ClassificationCondition -> EnvironmentalAnalog: EnvironmentalAnalog


ClassificationCondition -> DiagramObject: DiagramObjects


ClassificationCondition -> InstanceSet: InstanceSet


ClassificationCondition -> Name: Names


ClassificationCondition -> ChangeSetMember: PropertiesCIMDataObject


ClassificationCondition -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<PhenomenonClassification,`PhenomenonClassification`>>
| 0..1
| xref::class/PhenomenonClassification.adoc[`PhenomenonClassification`]
| +++Phenomenon classification to which this condition relates.+++

| <<duration,`duration`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++The duration of the of the condition in seconds+++

| <<test,`test`>>
| 0..1
| xref::enumeration/TestKind.adoc[`TestKind`]
| +++The test applied to the value.+++

| <<EnvironmentalAnalog,`EnvironmentalAnalog`>>
| 0..*
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]
| +++Analog which contributes to the definition of this classification condition.+++

| <<EnvironmentalStringMeasurement,`EnvironmentalStringMeasurement`>>
| 0..*
| xref::class/EnvironmentalStringMeasurement.adoc[`EnvironmentalStringMeasurement`]
| +++String measurement which contributes to the definition of this classification condition.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#duration]
=== `duration`
+++The duration of the of the condition in seconds+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ClassificationCondition.duration`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#EnvironmentalAnalog]
=== `EnvironmentalAnalog`
+++Analog which contributes to the definition of this classification condition.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ClassificationCondition.EnvironmentalAnalog`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]


|===

//[discrete]
[#EnvironmentalStringMeasurement]
=== `EnvironmentalStringMeasurement`
+++String measurement which contributes to the definition of this classification condition.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ClassificationCondition.EnvironmentalStringMeasurement`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalStringMeasurement.adoc[`EnvironmentalStringMeasurement`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PhenomenonClassification]
=== `PhenomenonClassification`
+++Phenomenon classification to which this condition relates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ClassificationCondition.PhenomenonClassification`
| Cardinality
| 0..1
| Type
| xref::class/PhenomenonClassification.adoc[`PhenomenonClassification`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#test]
=== `test`
+++The test applied to the value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ClassificationCondition.test`
| Cardinality
| 0..1
| Type
| xref::enumeration/TestKind.adoc[`TestKind`]


|===


